--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "postinstall": "cd client && npm install"
+    "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run storybook\"",
+    "postinstall": "cd client && npm install",
+    "storybook": "cd client && npm run storybook",
+    "build": "cd client && npm run build && npm run build-storybook",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
