--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,14 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "@babel/core": "^7.12.3",
+    "@storybook/addon-actions": "^6.1.0",
+    "@storybook/addon-essentials": "^6.1.0",
+    "@storybook/addon-links": "^6.1.0",
+    "@storybook/node-logger": "^6.1.0",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,13 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@storybook/addon-actions": "^6.1.0",
-    "@storybook/addon-essentials": "^6.1.0",
-    "@storybook/addon-links": "^6.1.0",
-    "@storybook/node-logger": "^6.1.0",
-    "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.0"
-  }
+  "devDependencies": {}
 }
